# zhipath-ai

./: .env.example  .gitignore  Makefile  README.md  package.json
docs/: cloud-migration.md  release.md  (+4 more)
services/ai-agent-service/: Dockerfile  pyproject.toml
services/ai-agent-service/app/: __init__.py  config.py  main.py
services/ai-agent-service/app/agents/: __init__.py  career.py  decision_coach.py  emotion.py
services/ai-agent-service/app/graph/: __init__.py  builder.py  routes.py  state.py
services/ai-agent-service/app/prompts/: __init__.py
services/ai-agent-service/app/providers/: __init__.py  anthropic.py  base.py  mock.py  openai_compatible.py
services/ai-agent-service/app/quality/: __init__.py  grounding.py  scorer.py
services/ai-agent-service/app/rag/: __init__.py  reranker.py  retriever.py  splitter.py
services/ai-agent-service/app/safety/: __init__.py  classifier.py  response.py  rules.py
services/ai-agent-service/app/schemas/: __init__.py  analysis.py  report.py
services/ai-agent-service/app/stores/: __init__.py  cache.py  checkpoint.py  vector.py
services/ai-agent-service/tests/: test_main.py
services/ai-agent-service/tests/agents/: test_agents.py
services/ai-agent-service/tests/graph/: test_graph.py  test_routes.py
services/ai-agent-service/tests/providers/: test_mock.py
services/ai-agent-service/tests/rag/: test_rag.py
services/ai-agent-service/tests/safety/: test_safety.py
services/ocr-service/: Dockerfile  pyproject.toml
services/ocr-service/app/: __init__.py  main.py
services/ocr-service/app/engine/: __init__.py
services/ocr-service/app/preprocess/: __init__.py
services/ocr-service/tests/: test_ocr.py
services/worker-service/: Dockerfile  pyproject.toml
services/worker-service/app/: __init__.py  worker.py
services/worker-service/app/clients/: __init__.py
services/worker-service/app/jobs/: __init__.py  knowledge_ingest.py  notification.py  report.py
services/worker-service/app/outbox/: __init__.py
services/worker-service/tests/: test_knowledge_ingest.py  test_outbox.py  test_report.py
(+88 files in other folders)
